--- a/words/07-open-by-default.Rmd
+++ b/words/07-open-by-default.Rmd
@@ -2,6 +2,10 @@
 title: Open by default
 description: How can software encourage that its data be open by default?
 tweet_text: A discovery on a @socrata data portal got me thinking about how software can encourage data to be open by default.
+twitter_title: The first of Sunlight Foundation's 32 Open Data Policy Guidelines is to "Set The Default To Open".
+twitter_description: This guideline is not just for policy; it applies to software too!
+twitter_image: screenshot.png
+facebook_image: screenshot.png
 ---
 ```{r configure, echo = F}
 opts_chunk$set(fig.width=10, fig.height=5, dpi = 42 * 5)
