--- a/words/15-dates.Rmd
+++ b/words/15-dates.Rmd
@@ -48,6 +48,11 @@ can check whether different values will give us the same value on our
 updatedness metric. To say it fancy-like, we can check whether our
 updatedness metric is robust to the cutoff.
 
+A simple way of checking this is to plot the value of our updatedness
+metric for different cutoff values. If we find a region where the value
+of the updatedness metric doesn't change very much when we change the
+cutoff, we could say that cutoffs in that region are safe to use.
+
 ## Updatedness by portal
 
 ### 
